--- a/src/app/view/tasa-cambiaria/tasa.component.scss
+++ b/src/app/view/tasa-cambiaria/tasa.component.scss
@@ -119,3 +119,8 @@ small.text-muted {
     // border: var(--details-color) !important;
      //col;
 }
+
+.bcv-unavailable {
+   color: #b03a48 !important;  // 🍷 Rojo vino
+  font-weight: 500;
+}
