--- a/src/app/view/historias-medicas/historias-medicas.component.scss
+++ b/src/app/view/historias-medicas/historias-medicas.component.scss
@@ -95,19 +95,57 @@
   width: 100%;
 }
 
-/* Estilo para la barra de scroll */
-.table-responsive-custom::-webkit-scrollbar {
+/* Estilos para el scrollbar del modal-body */
+.modal-body::-webkit-scrollbar {
+  width: 8px;
   height: 8px;
-  background-color: #f5f5f5;
 }
 
-.table-responsive-custom::-webkit-scrollbar-thumb {
-  background-color: #888;
+.modal-body::-webkit-scrollbar-track {
+  background: #f5f5f5;
   border-radius: 4px;
 }
 
+.modal-body::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 123, 255, 0.5);
+  border-radius: 4px;
+  border: 2px solid transparent;
+  background-clip: content-box;
+  transition: background-color 0.3s ease;
+}
+
+.modal-body::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 123, 255, 0.8);
+}
+
+
+/* Estilo para la barra de scroll */
+.table-responsive-custom::-webkit-scrollbar {
+  height: 8px;
+}
+
+.table-responsive-custom::-webkit-scrollbar-track {
+  background: #f5f5f5;
+  border-radius: 4px;
+}
+
+.table-responsive-custom::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 123, 255, 0.5);
+  border-radius: 4px;
+  border: 2px solid transparent;
+  background-clip: content-box;
+  transition: background-color 0.3s ease;
+}
+
 .table-responsive-custom::-webkit-scrollbar-thumb:hover {
-  background-color: #555;
+  background-color: rgba(0, 123, 255, 0.8);
+}
+
+/* Estilos para Firefox (ambos casos) */
+.modal-body,
+.table-responsive-custom {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(0, 123, 255, 0.5) #f5f5f5;
 }
 
 /* Estilos para selects */
@@ -155,32 +193,33 @@
 }
 
 .modal-header {
-    font-size: 1.2rem;
-    background: var(--degradado-color) !important;
-    /* Fondo amarillo */
+  font-size: 1.2rem;
+  background: var(--degradado-color) !important;
+  /* Fondo amarillo */
+  color: var(--details-color) !important;
+  /* Texto negro */
+  font-weight: bold;
+  border-bottom: 2px solid var(--secondary-color);
+  /* Línea divisoria negra */
+
+  .bi-plus-lg,
+  .fa-plus {
     color: var(--details-color) !important;
-    /* Texto negro */
-    font-weight: bold;
-    border-bottom: 2px solid var(--secondary-color);
-    /* Línea divisoria negra */
+    font-size: 1.25rem;
+    vertical-align: middle;
+  }
 
-    .bi-plus-lg,
-    .fa-plus {
-        color: var(--details-color) !important;
-        font-size: 1.25rem;
-        vertical-align: middle;
-    }
-
-    .btn-close {
-        filter: invert(1) grayscale(100%) brightness(200%);
-    }
+  .btn-close {
+    filter: invert(1) grayscale(100%) brightness(200%);
+  }
 
 }
+
 //Modal detalles de pacientes
 .modal-title {
-    text-align: left;
-    color: var(--details-color);
-    //   font-weight: bold;
+  text-align: left;
+  color: var(--details-color);
+  //   font-weight: bold;
 }
 
 .btn-primary {
