--- a/src/app/view/pacientes/pacientes.component.html
+++ b/src/app/view/pacientes/pacientes.component.html
@@ -128,7 +128,7 @@
         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
 
-      <div class="modal-body p-4" style="max-height: 70vh; overflow-y: auto;">
+      <div class="card-body p-4" style="max-height: 70vh; overflow-y: auto;">
         <form [formGroup]="formPaciente">
 
           <!-- 👤 Datos personales -->
@@ -376,10 +376,6 @@
     </div>
   </div>
 </div>
-
-
-
-
 
 
 <!-- Modal para visualizar paciente -->
