--- a/src/app/view/sidebar/sidebar.component.html
+++ b/src/app/view/sidebar/sidebar.component.html
@@ -16,8 +16,10 @@
   <link rel="stylesheet" href="./../../../assets/adminlte/dist/css/adminlte.min.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Edu+QLD+Hand:wght@400..700&family=Kapakana:wght@300..400&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Edu+QLD+Hand:wght@400..700&family=Kapakana:wght@300..400&display=swap"
+    rel="stylesheet">
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
@@ -39,8 +41,26 @@
       </ul>
 
       <!-- Right navbar links -->
-      <ul class="navbar-nav ml-auto">
-        <!-- Navbar Search -->
+      <ul class="navbar-nav w-100 d-flex justify-content-between align-items-center">
+
+        <!-- 🟦 Bloque izquierdo: sede y tasas -->
+        <div class="d-flex align-items-center ps-0 gap-4">
+          <!-- 📍 Sede activa -->
+          <div class="navbar-sede">
+            📍 Sede: <strong>{{ sedeActual | titlecase }}</strong>
+          </div>
+          <div style="width: 1px; height: 32px; background-color: rgba(255,255,255,0.3);"></div>
+
+          <!-- 💱 Bloque de tasas en columna -->
+          <div class="navbar-info-block d-flex flex-column">
+            <span>💵 <strong>USD:</strong> {{ tasaDolar | number:'1.2-2' }} Bs</span>
+            <span>💶 <strong>EUR:</strong> {{ tasaEuro | number:'1.2-2' }} Bs</span>
+          </div>
+        </div>
+
+
+
+        <!-- 🔍 Bloque derecho: buscador -->
         <li class="nav-item">
           <a class="nav-link" data-widget="navbar-search" href="#" role="button">
             <i class="fas fa-search"></i>
@@ -48,7 +68,7 @@
           <div class="navbar-search-block">
             <form class="form-inline">
               <div class="input-group input-group-sm">
-                <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
+                <input class="form-control form-control-navbar" type="search" placeholder="Buscar" aria-label="Buscar">
                 <div class="input-group-append">
                   <button class="btn btn-navbar" type="submit">
                     <i class="fas fa-search"></i>
@@ -62,6 +82,8 @@
           </div>
         </li>
       </ul>
+
+
     </nav>
     <!-- /.navbar -->
 
@@ -193,9 +215,9 @@
     </div>
   </div>
 
-<!-- Bootstrap Select plugin -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select/dist/css/bootstrap-select.min.css">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+  <!-- Bootstrap Select plugin -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select/dist/css/bootstrap-select.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
 
 </body>
 
